--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Card</title>
+    <title>Social Links Profile</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <img class="img-1" src="assets/illustration-article.svg" alt="" >
-           <div> <button id="btn-1">Learning</button></div>
-            <p class="p-1">Publish 21 Dec 2023</p>
-            <h1>HTML&CSS Foundation</h1>
-            <p class="p-2">These languages are the backbone of every website, defining structure, content, and presentation</p>
-
-            <span><img src="assets/image-avatar.webp" alt=""> <p>Greg Hooper</p></span>
-        </div>
+   <main>
+    <div class="card">
+        <img src="assets/images/avatar-jessica.jpeg" alt="" class="avatar">
+        <h1>Jessica Rendall</h1>
+        <p class="location">London, United Kingdom</p>
+        <p class="bio">"Front-end Developer and avid reader"</p>
+        <ul class="social-links">
+            <li><a href="#">Github</a></li>
+            <li><a href="#">Frontend Mentor</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+        </ul>
     </div>
+   </main>
 </body>
 </html>
